# Alertero-NOC

./: .env.example  .gitignore  ARCHITECTURE.md  ESTRUCTURA.md  GRAFANA_WEBHOOK_CONFIG.md  Makefile  README.md  REFACTOR_SUMMARY.md  create_project.sh  docker-compose.simple.yml  docker-compose.yml
backend/: .env.test  Dockerfile  alembic.ini  fix_duplicates.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_incidents_table.py  003_add_incident_updates_table.py
backend/app/: config.py  database.py  main.py  main_old.py  models.py  schemas.py  utils.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: __init__.py  alerts.py  health.py  incidents.py  maintenance.py  silences.py  webhook.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  alert.py  incident.py  silence.py
backend/app/dependencies/: __init__.py  db.py
backend/app/repositories/: __init__.py  alerts_repo.py  incidents_repo.py  silences_repo.py
backend/app/routers/: alerts.py  health.py  maintenance.py  silences.py  webhook.py
backend/app/schemas/: __init__.py  alert.py  common.py  incident.py  silence.py
backend/app/services/: __init__.py  alerts_service.py  incidents_service.py  silences_service.py
backend/app/utils/: __init__.py  alerts.py
backend/tests/: conftest.py  test_alerts.py  test_health.py
docs/: GRAFANA_WEBHOOK.md  QUICKSTART.md  SETUP_UBUNTU.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
nginx/: alertero.conf  alertero.conf.bak  locations.conf  nginx-simple.conf  nginx.conf
scripts/: backup.sh  bootstrap.sh  restore.sh  update.sh  (+1 more)
(+26 files in other folders)
